# Inventory-Management

./: CMakeLists.txt  bufferClear.cpp  bufferClear.h  io.cpp  main.cpp  mainMenu.h  output.txt  product.cpp  searchProduct.h
include/: io.h  product.h  removeProduct.h  showInventory.h  updateProduct.h
src/: mainMenu.cpp  removeProduct.cpp  searchProduct.cpp  showInventory.cpp  updateProduct.cpp
